Revision history for DBIx::Class

        - Added search_related_rs method to ResultSet
        - add a make_column_dirty method to Row to force updates
        - throw a clear exception when user tries multi-has_many prefetch
        - SQLT parser prefixes index names with ${table}_idx_ to avoid clashes
        - mark ResultSetManager as deprecated and undocument it
        - pod fix (RT #32988)
        - add Test::Exception to test requirements (RT #34256)
        - make ash's build_requires/META.yml fixes work better
        - is_deferable support on relations used by the SQL::Translator
          parser
        - Refactored DBIx::Class::Schema::Versioned
        - Syntax errors from resultset components are now reported correctly
        - sqltargs respected correctly in deploy et al.
        - Added support for savepoints, and using them automatically in
          nested transactions if auto_savepoint is set in connect_info.
        - Changed naming scheme for constraints and keys in the sqlt parser;
          names should now be consistent and collision-free.
        - Improve handling of explicit key attr in ResultSet::find
        - Add warnings for non-unique ResultSet::find queries
        - Changed Storage::DBI::Replication to Storage::DBI::Replicated, fixed
          some problems using this with versioned databases, added some docs
        - By default now deploy/diff et al. will ignore constraint and index 
          names
        - Add ResultSet::_is_deterministic_value, make new_result filter the
          values passed to new to drop values that would generate invalid SQL.

0.08010 2008-03-01 10:30
        - Fix t/94versioning.t so it passes with latest SQL::Translator

0.08009 2008-01-20 13:30
        - Made search_rs smarter about when to preserve the cache to fix
          mm prefetch usage
        - Added Storage::DBI subclass for MSSQL over ODBC. 
        - Added freeze, thaw and dclone methods to Schema so that thawed