@@ -1,5 +1,7 @@
 Revision history for DBIx::Class
 
+        - Added datetime_undef_if_invalid for InflateColumn::DateTime to
+          return undef on invalid date/time values
         - Added search_related_rs method to ResultSet
         - add a make_column_dirty method to Row to force updates
         - throw a clear exception when user tries multi-has_many prefetch
